# scope-rl

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  FrequentlyAskedQuestions.md  LICENSE  MANIFEST.in  README.md  README_ja.md  _gym.env.wrapper_rtb.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
_gym/: __init__.py  types.py  utils.py
basicgym/: README.md  README_ja.md  __init__.py  types.py  utils.py
docs/: README.md  about.rst  conf.py  evaluation_implementation.rst  index.rst  installation.rst  learning_implementation.rst  make.bat  offlinegym.rst  ofrl.rst  online_offline_rl.rst  ope_ops.rst  quickstart.rst  references.rst  refs.bib  requirements.txt  rtbgym.rst  rtbgym_about.rst  setup.py
experiments/: README.md  convensional.py  data_collection.py  main.py  metric_compare.ipynb  ope copy.py  ope.py  ope_continuous.py  ops_topk_evaluation.py  policy_learning copy.py  policy_learning.py  policy_learning_behavior.py  policy_learning_candidates.py  policy_learning_continuous.py  utils.py  visualize.py
offlinegym/: types.py  utils.py
ofrl/: utils.py
recgym/: README.md  README_ja.md  __init__.py  function.py  rec.py  types.py  utils.py
rtbgym/: README.md  README_ja.md  __init__.py  bidder.py  types.py  utils.py  version.py
scope_rl/: __init__.py  types.py  utils.py  version.py
syntheticgym/: README.md  __init__.py  types.py
tests/: test_utils.py
tutorial/: .gitignore  behavior_policy_<ofrl.utils.OldGymAPIWrapper object at 0x16c64c190>_Box(-1.0, 1.0, (3,), float64)_100.pickle  cql_action_space.ipynb  (+35 more)
(+1205 files in other folders)
