[tool.poetry]
name = "scope-rl"
version = "0.1.0"
description = "SCOPE-RL: A pipeline for offline reinforcement learning research and applications"
authors = ["Haruka Kiyohara <hk844@cornell.edu>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "scope_rl"}, {include = "rtbgym"}, {include = "recgym"}, {include = "basicgym"}]

[tool.poetry.dependencies]
python = "^3.7.1"
scipy = "^1.10.1"
numpy = "^1.22.4"
pandas = "^1.5.3"
scikit-learn = "^1.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.11.2"
torch = "^2.0.0"
d3rlpy = "^1.1.1"
gym = "^0.26.2"
gymnasium = "^0.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.2"
black = "22.1.0"
pytest = "^6.2.5"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
src_paths = ['scope_rl', 'recgym', 'rtbgym', 'basicgym', 'tests']
line_length = 88
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.pytest.ini_options]
addopts = "--color=yes"
